# zephyr

arch/: Kconfig  archs.yml
arch/common/: Kconfig
arch/hexagon/: CMakeLists.txt  Kconfig  defconfig
arch/hexagon/core/: CMakeLists.txt  Kconfig  bare_event_vectors.S  bare_reset.S  cache_v60.c  cache_v65.c  cache_v66.c  coredump.c  cpu_idle.S  cpu_idle.c  crt0.S  event_handlers.S  event_vectors.S  fatal.c  gdbstub.c  hexagon_rt.S  hvm_event_vectors.S  hvx.c  hvx_context.S  hw_threads.c  intc.c  irq_manage.c  isr.S  isr_tables.c  mem_manage.c  power.c  prep_c.c  reset.S  semihost.c  stack_protect.c  swap.S  swap.c  switch.S  switch.c  switch_enhanced.S  thread.c  thread_abort.c  thread_entry.S  thread_support.c  thread_switch.c  (+7 more)
arch/hexagon/core/offsets/: CMakeLists.txt  offsets.c
arch/hexagon/include/: atomic.h  ffs.h  hexagon_arch.h  hexagon_vm.h  hvx.h  irq.h  irq_connect.h  kernel_arch_data.h  kernel_arch_func.h  kernel_arch_stack.h  kernel_arch_thread.h  memory.h  offsets_short_arch.h  thread_stack.h
arch/hexagon/include/arch/: cpu.h
arch/hexagon/include/hexagon/: hexagonregs.h
cmake/emu/: qemu.cmake
cmake/modules/: FindEld.cmake
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.pl011_hexagon  uart_hvm_console.c  uart_pl011_hexagon.c  uart_semihost_hexagon.c
drivers/timer/: CMakeLists.txt  Kconfig  Kconfig.hexagon  hexagon_timer.c  hexagon_timer.h
dts/hexagon/: hexagon-v66.dtsi
include/zephyr/: toolchain.h
quic/: build_hex.sh
samples/hello_world/: dis_lvgl.conf  prj.conf  prj_minimal.conf
samples/hexagon_hvx_test/: CMakeLists.txt  prj.conf
(+100 files in other folders)
